<resources>
    <string name="app_name">Covid</string>
    <string name="mainHeading">Welcome to Helpers United</string>
    <string name="login">Login</string>
    <string name="enter_login_id">Enter Phone Number</string>
    <string name="password">OTP</string>
    <string name="sign_up">Sign up</string>
    <string name="please_enter_your_full_name">Please Enter Your Full Name</string>
    <string name="enter_your_10_digit_mobile_number">Enter your 10 digit mobile number</string>
    <string name="volunteer">Volunteer</string>
    <string name="raw_material">Raw Material</string>
    <string name="transportation">Transportation</string>
    <string name="lets_go">Let\'s Go!</string>
    <string name="null1">null</string>
    <string name="home">Home</string>
    <string-array name="india_states">

        <item>Tamil Nadu</item>

    </string-array>
    <string-array name="andhra">
        <item>Kurnool</item>
        <item>Guntur</item>
        <item>Nellore</item>
        <item>Prakasham</item>
        <item>Krishna</item>
        <item>YSR</item>
        <item>West Godavari</item>
        <item>Chittor</item>
        <item>Visakhapatnam</item>
        <item>East Godavari</item>
        <item>Anantapur</item>
    </string-array>
    <string-array name="bihar">
        <item>Anantapur</item>
    </string-array>
    <string-array name="chandigarh">
        <item>Chandigarh</item>
    </string-array>
    <string-array name="chattisgarh">
        <item>Korba</item>
    </string-array>
    <string-array name="delhi">
        <item>South</item>
        <item>South East</item>
        <item>Shahdara</item>
        <item>West</item>
        <item>North</item>
        <item>Central</item>
        <item>New Delhi</item>
        <item>East</item>
        <item>South West</item>
    </string-array>
    <string-array name="gujarat">
        <item>Ahmedabad</item>
        <item>Vadodara</item>
        <item>Surat</item>
        <item>Bhavnagar</item>
        <item>Rajkot</item>
    </string-array>
    <string-array name="haryana">
        <item>Noah</item>
        <item>Gurugram</item>
        <item>Parval</item>
        <item>Fardiabad</item>
    </string-array>
    <string-array name="jammukashmir">
        <item>Srinagar</item>
        <item>Bandipora</item>
        <item>Baramulla</item>
        <item>Jammu</item>
        <item>Udhampur</item>
        <item>Kupwada</item>
    </string-array>
    <string-array name="karnataka">
        <item>Bengaluru Urban</item>
        <item>Mussoorie</item>
        <item>Belagavi</item>
    </string-array>
    <string-array name="kerala">
        <item>Kannur</item>
        <item>Ernakulam</item>
        <item>Kasaragod</item>
        <item>Malapuram</item>
        <item>Pathanamthitta</item>
    </string-array>
    <string-array name="madhyapradesh">
        <item>Indore</item>
        <item>Bhopal</item>
        <item>Khargaon</item>
        <item>Ujjain</item>
        <item>Hoshangabad</item>
    </string-array>
    <string-array name="maharashtra">
        <item>Mumbai</item>
        <item>Pune</item>
        <item>Thane</item>
        <item>Nagpur</item>
        <item>Sangli</item>
        <item>Ahmednagar</item>
        <item>Yavatmal</item>
        <item>Aurangabad</item>
        <item>Buldhana</item>
        <item>Mumbai Suburban</item>
        <item>Nashik</item>
    </string-array>
    <string-array name="odisha">
        <item>Khordha</item>
    </string-array>
    <string-array name="punjab">
        <item>SAS Nagar</item>
        <item>Shaheed Bhagat Singh Nagar</item>
        <item>Jalandhar</item>
        <item>Pathankot</item>
    </string-array>
    <string-array name="rajasthan">
        <item>Jaipur</item>
        <item>Tonk</item>
        <item>Jodhpur</item>
        <item>Banswara</item>
        <item>Kota</item>
        <item>Jhunjhunu</item>
        <item>Jaisalmer</item>
        <item>Bhilwara</item>
        <item>Bikaner</item>
        <item>Jalwar</item>
        <item>Bharatpur</item>
    </string-array>
    <string-array name="dayOfMonth">
        <item>Select Day</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>


    </string-array>
    <string-array name="months">
        <item>Select Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>'
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="years">
        <item>Select Year</item>
        <item>1900</item>
        <item>1901</item>
        <item>1902</item>
        <item>1903</item>
        <item>1904</item>
        <item>1905</item>
        <item>1906</item>
        <item>1907</item>
        <item>1908</item>
        <item>1909</item>
        <item>1910</item>
        <item>1911</item>
        <item>1912</item>
        <item>1913</item>
        <item>1914</item>
        <item>1915</item>
        <item>1916</item>
        <item>1917</item>
        <item>1918</item>
        <item>1919</item>
        <item>1920</item>
        <item>1921</item>
        <item>1922</item>
        <item>1923</item>
        <item>1924</item>
        <item>1925</item>
        <item>1926</item>
        <item>1927</item>
        <item>1928</item>
        <item>1929</item>
        <item>1930</item>
        <item>1931</item>
        <item>1932</item>
        <item>1933</item>
        <item>1934</item>
        <item>1935</item>
        <item>1936</item>
        <item>1937</item>
        <item>1938</item>
        <item>1939</item>
        <item>1940</item>
        <item>1941</item>
        <item>1942</item>
        <item>1943</item>
        <item>1944</item>
        <item>1945</item>
        <item>1946</item>
        <item>1947</item>
        <item>1948</item>
        <item>1949</item>
        <item>1950</item>
        <item>1951</item>
        <item>1952</item>
        <item>1953</item>
        <item>1954</item>
        <item>1955</item>
        <item>1956</item>
        <item>1957</item>
        <item>1958</item>
        <item>1959</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
        <item>2041</item>
        <item>2042</item>
        <item>2043</item>
        <item>2044</item>
        <item>2045</item>
        <item>2046</item>
        <item>2047</item>
        <item>2048</item>
        <item>2049</item>
        <item>2050</item>
    </string-array>
    <string-array name="tamilnadu">
        <item>Select a City</item>
        <item>Chennai</item>
        <item>Tiruchirappali</item>
        <item>Coimbatore</item>
        <item>Tirunelveli</item>
        <item>Erode</item>
        <item>Vellore</item>
        <item>Dindigul</item>
        <item>Villupuram</item>
        <item>Tirupur</item>
        <item>Thani</item>
        <item>Namakkal</item>
        <item>Chengalpattu</item>
        <item>Madhurai</item>
        <item>Tatikoran</item>
        <item>Karur</item>
        <item>Virudhunaru</item>
        <item>Kanarukuru</item>
    </string-array>
    <string-array name="telangana">
        <item>Hyderabad</item>
        <item>Nizamabad</item>
        <item>Wrangal Urban</item>
        <item>Ranga Reddy</item>
        <item>Jogulamba Gadwal</item>
        <item>Machhal-Malkarjagiri</item>
        <item>Karimnagar</item>
        <item>Nirmal</item>
    </string-array>
    <string-array name="uttarpradesh">
        <item>Agra</item>
        <item>Gautam Buddha Nagar</item>
        <item>Meerut</item>
        <item>Lucknow</item>
        <item>Ghaziabad</item>
        <item>Shaharanpur</item>
        <item>Shamli</item>
        <item>Firozabad</item>
        <item>Moradabad</item>
    </string-array>
    <string-array name="uttarakhand">
        <item>Dehradun</item>
    </string-array>
    <string-array name="westbengal">
        <item>Kolkata</item>
        <item>Howrah</item>
        <item>Madinapur East</item>
        <item>24 Parganas North</item>
    </string-array>
</resources>