<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="94dp">

        <TextView
            android:id="@+id/tvSignup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="25sp"
            android:paddingBottom="25sp"
            android:text="@string/sign_up"
            android:textColor="@color/icons"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/etSignUpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:ems="10"
            android:hint="@string/please_enter_your_full_name"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etSignUpPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:ems="10"
            android:hint="@string/enter_your_10_digit_mobile_number"
            android:inputType="phone"
            android:autofillHints="" />

        <Spinner
            android:id="@+id/spSignUpState"
            android:layout_width="match_parent"
            android:entries="@array/india_states"
            android:layout_height="wrap_content"
            android:layout_margin="5sp" />

        <Spinner
            android:id="@+id/spSignUpCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp" />

        <Spinner
            android:id="@+id/spSignUpLocality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_margin="10sp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbSignUpVol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/volunteer" />

            <CheckBox
                android:id="@+id/cbSignUpRaw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/raw_material" />

            <CheckBox
                android:id="@+id/cbSignUpTransport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transportation" />
        </LinearLayout>

        <Button
            android:id="@+id/btSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100sp"
            android:layout_marginTop="150sp"
            android:layout_marginRight="100sp"
            android:background="@color/primary_light"
            android:text="@string/lets_go" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>