<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.main_home">

    <TextView
        android:id="@+id/home_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:text="Sample"
        android:textColor="@color/primary_text"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/tvhomeVol"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tvhomeVol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volunteer"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvHomeVolCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897" />

    <TextView
        android:id="@+id/tvhomeRaw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/raw_material"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tvHomeRawCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHomeVolCount"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvhomeTrans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="352dp"
        android:text="@string/transportation"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="People Near You"
        android:textColor="@color/primary_text"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/tvhomeVol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816" />

    <TextView
        android:id="@+id/tvHomeVolCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/null1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHomeRawCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="402dp"
        android:text="@string/null1"
        app:layout_constraintBottom_toBottomOf="@+id/layoutMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvHomeTransCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/null1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvhomeTrans" />

    <LinearLayout
        android:id="@+id/layoutMenu"
        android:layout_width="408dp"
        android:layout_height="72dp"
        android:layout_marginTop="224dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHomeTransCount">

        <Button
            android:id="@+id/btMainHome"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home" />

        <Button
            android:id="@+id/btHomeHelp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Send Help" />

        <Button
            android:id="@+id/btHomeRequest"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Request Help" />

        <Button
            android:id="@+id/btHomeProfile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="My Profile" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>